Crash Reporting refactoring, add user reporting